<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>stub-idp</groupId>
    <artifactId>stub-idp-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <!-- language version -->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven_compiler_plugin.version>3.8.1</maven_compiler_plugin.version>

        <!-- runtime dependencies -->
        <opensaml.version>3.4.3</opensaml.version>
        <dropwizard.version>2.0.0-rc5</dropwizard.version>
        <guice.version>4.2.2</guice.version>
        <guava.version>28.0-jre</guava.version>
        <joda_time.version>2.10.3</joda_time.version>
        <shibboleth_utils.version>7.5.0</shibboleth_utils.version>
        <javax_validation.version>2.0.1.Final</javax_validation.version>
        <jackson_annotations.version>2.9.9</jackson_annotations.version>
        <jackson_databind.version>2.9.9.3</jackson_databind.version>
        <jackson_datatype_joda.version>2.9.9</jackson_datatype_joda.version>
        <nimbus_jwt.version>7.7</nimbus_jwt.version>
        <slf4j.version>1.7.28</slf4j.version>
        <jaxb.version>2.3.1</jaxb.version>
        <commons_codec.version>1.13</commons_codec.version>
        <commons_io.version>2.6</commons_io.version>
        <commons_lang.version>2.6</commons_lang.version>
        <commons_lang3.version>3.9</commons_lang3.version>
        <commons_validator.version>1.6</commons_validator.version>
        <aws_java_sdk.version>1.11.607</aws_java_sdk.version>
        <logstash_logback_encoder.version>6.1</logstash_logback_encoder.version>
        <logback.version>1.2.3</logback.version>
        <javax_activation.version>1.2.0</javax_activation.version>
        <javax_inject.version>2.5.0</javax_inject.version>
        <freemarker.version>2.3.29</freemarker.version>

        <!-- test dependencies -->
        <assertj.version>3.13.2</assertj.version>
        <assertj_jodatime.version>2.2.0</assertj_jodatime.version>
        <junit.version>5.5.1</junit.version>
        <mockito.version>3.0.0</mockito.version>
        <hamcrest.version>2.1</hamcrest.version><!-- only in dropwizard-logstash -->
    </properties>

    <modules>
        <module>stub-idp</module>
        <module>hub-saml</module>
        <module>saml-extensions</module>
        <module>saml-metadata-bindings</module>
        <module>saml-security</module>
        <module>saml-serializers</module>
        <module>saml-utils</module>
        <module>trust-anchor</module>
        <module>stub-idp-saml</module>
        <module>stub-idp-saml-test</module>
        <module>integration-tests</module>
        <module>test-utils</module>
        <module>common-utils</module>
        <module>rest-utils</module>
        <module>security-utils</module>
        <module>event-emitter</module>
        <module>dropwizard-logstash</module>
        <module>dev-pki</module>
    </modules>

    <repositories>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com</url>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
        <repository>
            <id>shibboleth opensaml</id>
            <url>https://build.shibboleth.net/nexus/content/repositories/releases</url>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <!--https://mark.koli.ch/fail-build-on-java-compiler-warnings-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven_compiler_plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>-Xlint:-processing</arg>
                        <arg>-Xlint:-serial</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <forkCount>0</forkCount>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M3</version>
            </plugin>
        </plugins>
    </build>

    <!-- https://junit.org/junit5/docs/current/user-guide/#running-tests-ide-intellij-idea -->
    <dependencies>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>1.5.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
